--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 </head>
 <body>
   <header>
-    <h2 id="logo"><span id="logo-name">S.</span>m.</h2>
     <nav class="navigation">
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">About me</a>
-      <a href="#">Contact</a>
+      <h2 id="logo"><span id="logo-name">S.</span>m.</h2>
+      <ul>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">About me</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <a href="#" id="talk"> Let's talk</a>
     </nav>
-    <a href="#" class="btn-talk">Let's talk</a>
+  
   </header>
 
   <section id="home">
@@ -33,9 +36,9 @@
       </div>
 
       <div class="social-icons">
-        <a href="#"><i class="fa-brands fa-behance"></i></a>
-        <a href="#"><i class="fa-regular fa-basketball"></i></a>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.behance.net/seyimeshileya"><i class="fa-brands fa-behance"></i></a>
+        <a href="https://dribbble.com/seyimesh"><i class="fa-regular fa-basketball"></i></a>
+        <a href="https://github.com/Seyimesh"><i class="fa-brands fa-github"></i></a>
       </div>
     </div>
 
@@ -43,8 +46,8 @@
 
   </section>
 
-  <section>
-    <div class="scrolling">
+<!--  <section>
+    <div class="scrollin">
       <ul id="scroll-group">
         <li class="scroll"><a href="#">Brief</a></li>
         <li class="scroll"><a href="#">Brief</a></li>
@@ -55,7 +58,7 @@
         <li class="scroll"><a href="#">Brief</a></li>
       </ul>
     </div>
-  </section>
+  </section>-->
 
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
